// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Generated code snapshots user-validator.ts snapshot 1`] = `
"// Generated by @speria-jp/json-schema-validator-gen
// https://github.com/speria-jp/json-schema-validator-gen
// Do not edit manually
// ============================================================================
// Validation Types (auto-generated)
// ============================================================================

type ValidationResult<T> =
  | { success: true; data: T }
  | { success: false; issues: ValidationIssue[] };

interface ValidationIssue {
  code: ValidationIssueCode;
  path: (string | number)[];
  message: string;
  expected: string;
  received: string;
}

type ValidationIssueCode =
  | "invalid_type"
  | "invalid_value"
  | "too_small"
  | "too_big"
  | "invalid_string"
  | "not_integer"
  | "not_unique"
  | "unrecognized_key"
  | "missing_key";

interface ValidationOptions {
  abortEarly?: boolean;
}

// ============================================================================
// Validation Helpers (auto-generated)
// ============================================================================

function _getType(value: unknown): string {
  if (value === null) return "null";
  if (Array.isArray(value)) return "array";
  return typeof value;
}

function _invalidType(issues: ValidationIssue[], path: (string | number)[], expected: string, value: unknown): void {
  const received = _getType(value);
  issues.push({ code: "invalid_type", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _missingKey(issues: ValidationIssue[], path: (string | number)[], key: string): void {
  const expected = \`object with required property "\${key}"\`;
  const received = \`object without property "\${key}"\`;
  issues.push({ code: "missing_key", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _tooSmall(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "too_small", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _tooBig(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "too_big", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _invalidString(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "invalid_string", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _invalidValue(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "invalid_value", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _notInteger(issues: ValidationIssue[], path: (string | number)[], value: number): void {
  issues.push({ code: "not_integer", path, message: \`Expected integer, received \${value}\`, expected: "integer", received: String(value) });
}

function _notUnique(issues: ValidationIssue[], path: (string | number)[]): void {
  issues.push({ code: "not_unique", path, message: "Expected array with unique items, received array with duplicate items", expected: "array with unique items", received: "array with duplicate items" });
}

function _unrecognizedKey(issues: ValidationIssue[], path: (string | number)[], expected: string, key: string): void {
  issues.push({ code: "unrecognized_key", path, message: \`Expected \${expected}, received \${key}\`, expected, received: key });
}


export type User = {
    id: number;
    name: string;
    email: string;
    age?: number;
    tags?: string[];
    role?: "admin" | "user" | "guest";
    location?: [
        number,
        number
    ];
};


export function validateUser(value: unknown, options?: ValidationOptions): ValidationResult<User> {
    const issues: ValidationIssue[] = [];
    const abortEarly = options?.abortEarly ?? false;
    if (!(typeof value === "object" && value !== null && !Array.isArray(value))) {
        _invalidType(issues, [], "object", value);
        if (abortEarly)
            return { success: false, issues };
    }
    else {
        if (!("id" in value)) {
            _missingKey(issues, [], "id");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("name" in value)) {
            _missingKey(issues, [], "name");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("email" in value)) {
            _missingKey(issues, [], "email");
            if (abortEarly)
                return { success: false, issues };
        }
        if ("id" in value) {
            if (!(typeof value.id === "number")) {
                _invalidType(issues, ["id"], "integer", value.id);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (!Number.isInteger(value.id)) {
                    _notInteger(issues, ["id"], value.id);
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (value.id < 1) {
                    _tooSmall(issues, ["id"], "number >= 1", String(value.id));
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        if ("name" in value) {
            if (!(typeof value.name === "string")) {
                _invalidType(issues, ["name"], "string", value.name);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (value.name.length < 1) {
                    _tooSmall(issues, ["name"], "string with length >= 1", \`string with length \${value.name.length}\`);
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (value.name.length > 100) {
                    _tooBig(issues, ["name"], "string with length <= 100", \`string with length \${value.name.length}\`);
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        if ("email" in value) {
            if (!(typeof value.email === "string")) {
                _invalidType(issues, ["email"], "string", value.email);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (!/^[\\w.-]+@[\\w.-]+\\.[a-z]{2,}$/.test(value.email)) {
                    _invalidString(issues, ["email"], "string matching pattern /^[\\\\w.-]+@[\\\\w.-]+\\\\.[a-z]{2,}$/", value.email);
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        if ("age" in value) {
            if (!(typeof value.age === "number")) {
                _invalidType(issues, ["age"], "integer", value.age);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (!Number.isInteger(value.age)) {
                    _notInteger(issues, ["age"], value.age);
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (value.age < 0) {
                    _tooSmall(issues, ["age"], "number >= 0", String(value.age));
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (value.age > 150) {
                    _tooBig(issues, ["age"], "number <= 150", String(value.age));
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        if ("tags" in value) {
            if (!Array.isArray(value.tags)) {
                _invalidType(issues, ["tags"], "array", value.tags);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                for (let i1 = 0; i1 < value.tags.length; i1++) {
                    if (!(typeof value.tags[i1] === "string")) {
                        _invalidType(issues, ["tags", i1], "string", value.tags[i1]);
                        if (abortEarly)
                            return { success: false, issues };
                    }
                }
            }
        }
        if ("role" in value) {
            if (!(["admin", "user", "guest"] as unknown[]).includes(value.role)) {
                _invalidValue(issues, ["role"], "\\"admin\\" | \\"user\\" | \\"guest\\"", JSON.stringify(value.role));
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("location" in value) {
            if (!Array.isArray(value.location)) {
                _invalidType(issues, ["location"], "array", value.location);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (value.location.length !== 2) {
                    issues.push({ code: "invalid_type", path: ["location"], message: \`Expected \${"tuple with 2 elements"}, received \${\`array with \${value.location.length} elements\`}\`, expected: "tuple with 2 elements", received: \`array with \${value.location.length} elements\` });
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (!(typeof value.location[0] === "number")) {
                    _invalidType(issues, ["location", 0], "number", value.location[0]);
                    if (abortEarly)
                        return { success: false, issues };
                }
                else {
                    if (value.location[0] < -90) {
                        _tooSmall(issues, ["location", 0], "number >= -90", String(value.location[0]));
                        if (abortEarly)
                            return { success: false, issues };
                    }
                    if (value.location[0] > 90) {
                        _tooBig(issues, ["location", 0], "number <= 90", String(value.location[0]));
                        if (abortEarly)
                            return { success: false, issues };
                    }
                }
                if (!(typeof value.location[1] === "number")) {
                    _invalidType(issues, ["location", 1], "number", value.location[1]);
                    if (abortEarly)
                        return { success: false, issues };
                }
                else {
                    if (value.location[1] < -180) {
                        _tooSmall(issues, ["location", 1], "number >= -180", String(value.location[1]));
                        if (abortEarly)
                            return { success: false, issues };
                    }
                    if (value.location[1] > 180) {
                        _tooBig(issues, ["location", 1], "number <= 180", String(value.location[1]));
                        if (abortEarly)
                            return { success: false, issues };
                    }
                }
            }
        }
        for (const key2 in value) {
            if (!["id", "name", "email", "age", "tags", "role", "location"].includes(key2)) {
                _unrecognizedKey(issues, [key2], \`one of known properties (\${["id", "name", "email", "age", "tags", "role", "location"].join(", ")})\`, key2);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
    }
    if (issues.length > 0) {
        return { success: false, issues };
    }
    return { success: true, data: value as User };
}
export function unsafeValidateUser(value: unknown): User {
    const result = validateUser(value, { abortEarly: true });
    if (!result.success) {
        throw new Error("Validation failed: value is not User");
    }
    return result.data;
}
"
`;

exports[`Generated code snapshots complex-validator.ts snapshot 1`] = `
"// Generated by @speria-jp/json-schema-validator-gen
// https://github.com/speria-jp/json-schema-validator-gen
// Do not edit manually
// ============================================================================
// Validation Types (auto-generated)
// ============================================================================

type ValidationResult<T> =
  | { success: true; data: T }
  | { success: false; issues: ValidationIssue[] };

interface ValidationIssue {
  code: ValidationIssueCode;
  path: (string | number)[];
  message: string;
  expected: string;
  received: string;
}

type ValidationIssueCode =
  | "invalid_type"
  | "invalid_value"
  | "too_small"
  | "too_big"
  | "invalid_string"
  | "not_integer"
  | "not_unique"
  | "unrecognized_key"
  | "missing_key";

interface ValidationOptions {
  abortEarly?: boolean;
}

// ============================================================================
// Validation Helpers (auto-generated)
// ============================================================================

function _getType(value: unknown): string {
  if (value === null) return "null";
  if (Array.isArray(value)) return "array";
  return typeof value;
}

function _invalidType(issues: ValidationIssue[], path: (string | number)[], expected: string, value: unknown): void {
  const received = _getType(value);
  issues.push({ code: "invalid_type", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _missingKey(issues: ValidationIssue[], path: (string | number)[], key: string): void {
  const expected = \`object with required property "\${key}"\`;
  const received = \`object without property "\${key}"\`;
  issues.push({ code: "missing_key", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _tooSmall(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "too_small", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _tooBig(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "too_big", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _invalidString(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "invalid_string", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _invalidValue(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "invalid_value", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _notInteger(issues: ValidationIssue[], path: (string | number)[], value: number): void {
  issues.push({ code: "not_integer", path, message: \`Expected integer, received \${value}\`, expected: "integer", received: String(value) });
}

function _notUnique(issues: ValidationIssue[], path: (string | number)[]): void {
  issues.push({ code: "not_unique", path, message: "Expected array with unique items, received array with duplicate items", expected: "array with unique items", received: "array with duplicate items" });
}

function _unrecognizedKey(issues: ValidationIssue[], path: (string | number)[], expected: string, key: string): void {
  issues.push({ code: "unrecognized_key", path, message: \`Expected \${expected}, received \${key}\`, expected, received: key });
}


export type Complex = {
    id: number;
    name: string;
    price: number;
    discount?: number;
    tags?: string[];
    metadata?: {
        manufacturer?: string;
        warranty?: number;
    };
    status?: "available" | "out-of-stock" | "discontinued";
    variants?: Variant[];
    shippingMethod?: {
        type: "standard";
        estimatedDays: number;
    } | {
        type: "express";
        guaranteedDate: string;
    };
    paymentOptions?: {
        creditCard: {
            lastFourDigits: string;
            brand: "visa" | "mastercard" | "amex";
        };
    } | {
        paypal: {
            email: string;
        };
    } | {
        bankTransfer: {
            accountNumber: string;
        };
    };
    features: {
        name: string;
        values: string | string[] | (string | number)[];
    }[];
};


type Variant = {
    sku: string;
    attributes: Record<string, unknown>;
};


export function validateComplex(value: unknown, options?: ValidationOptions): ValidationResult<Complex> {
    const issues: ValidationIssue[] = [];
    const abortEarly = options?.abortEarly ?? false;
    if (!(typeof value === "object" && value !== null && !Array.isArray(value))) {
        _invalidType(issues, [], "object", value);
        if (abortEarly)
            return { success: false, issues };
    }
    else {
        if (!("id" in value)) {
            _missingKey(issues, [], "id");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("name" in value)) {
            _missingKey(issues, [], "name");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("price" in value)) {
            _missingKey(issues, [], "price");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("features" in value)) {
            _missingKey(issues, [], "features");
            if (abortEarly)
                return { success: false, issues };
        }
        if ("id" in value) {
            if (!(typeof value.id === "number")) {
                _invalidType(issues, ["id"], "integer", value.id);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (!Number.isInteger(value.id)) {
                    _notInteger(issues, ["id"], value.id);
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (value.id < 1) {
                    _tooSmall(issues, ["id"], "number >= 1", String(value.id));
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        if ("name" in value) {
            if (!(typeof value.name === "string")) {
                _invalidType(issues, ["name"], "string", value.name);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (value.name.length < 1) {
                    _tooSmall(issues, ["name"], "string with length >= 1", \`string with length \${value.name.length}\`);
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (value.name.length > 100) {
                    _tooBig(issues, ["name"], "string with length <= 100", \`string with length \${value.name.length}\`);
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        if ("price" in value) {
            if (!(typeof value.price === "number")) {
                _invalidType(issues, ["price"], "number", value.price);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (value.price < 0) {
                    _tooSmall(issues, ["price"], "number >= 0", String(value.price));
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (value.price >= 1000000) {
                    _tooBig(issues, ["price"], "number < 1000000", String(value.price));
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        if ("discount" in value) {
            if (!(typeof value.discount === "number")) {
                _invalidType(issues, ["discount"], "number", value.discount);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (value.discount < 0) {
                    _tooSmall(issues, ["discount"], "number >= 0", String(value.discount));
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (value.discount > 100) {
                    _tooBig(issues, ["discount"], "number <= 100", String(value.discount));
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        if ("tags" in value) {
            if (!Array.isArray(value.tags)) {
                _invalidType(issues, ["tags"], "array", value.tags);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (value.tags.length < 1) {
                    _tooSmall(issues, ["tags"], "array with at least 1 items", \`array with \${value.tags.length} items\`);
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (value.tags.length > 10) {
                    _tooBig(issues, ["tags"], "array with at most 10 items", \`array with \${value.tags.length} items\`);
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (new Set(value.tags).size !== value.tags.length) {
                    _notUnique(issues, ["tags"]);
                    if (abortEarly)
                        return { success: false, issues };
                }
                for (let i1 = 0; i1 < value.tags.length; i1++) {
                    if (!(typeof value.tags[i1] === "string")) {
                        _invalidType(issues, ["tags", i1], "string", value.tags[i1]);
                        if (abortEarly)
                            return { success: false, issues };
                    }
                }
            }
        }
        if ("metadata" in value) {
            if (!(typeof value.metadata === "object" && value.metadata !== null && !Array.isArray(value.metadata))) {
                _invalidType(issues, ["metadata"], "object", value.metadata);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (Object.keys(value.metadata).length < 1) {
                    _tooSmall(issues, ["metadata"], "object with at least 1 properties", \`object with \${Object.keys(value.metadata).length} properties\`);
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (Object.keys(value.metadata).length > 5) {
                    _tooBig(issues, ["metadata"], "object with at most 5 properties", \`object with \${Object.keys(value.metadata).length} properties\`);
                    if (abortEarly)
                        return { success: false, issues };
                }
                if ("manufacturer" in value.metadata) {
                    if (!(typeof value.metadata.manufacturer === "string")) {
                        _invalidType(issues, ["metadata", "manufacturer"], "string", value.metadata.manufacturer);
                        if (abortEarly)
                            return { success: false, issues };
                    }
                }
                if ("warranty" in value.metadata) {
                    if (!(typeof value.metadata.warranty === "number")) {
                        _invalidType(issues, ["metadata", "warranty"], "integer", value.metadata.warranty);
                        if (abortEarly)
                            return { success: false, issues };
                    }
                    else {
                        if (!Number.isInteger(value.metadata.warranty)) {
                            _notInteger(issues, ["metadata", "warranty"], value.metadata.warranty);
                            if (abortEarly)
                                return { success: false, issues };
                        }
                        if (value.metadata.warranty < 0) {
                            _tooSmall(issues, ["metadata", "warranty"], "number >= 0", String(value.metadata.warranty));
                            if (abortEarly)
                                return { success: false, issues };
                        }
                    }
                }
            }
        }
        if ("status" in value) {
            if (!(["available", "out-of-stock", "discontinued"] as unknown[]).includes(value.status)) {
                _invalidValue(issues, ["status"], "\\"available\\" | \\"out-of-stock\\" | \\"discontinued\\"", JSON.stringify(value.status));
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("variants" in value) {
            if (!Array.isArray(value.variants)) {
                _invalidType(issues, ["variants"], "array", value.variants);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                for (let i2 = 0; i2 < value.variants.length; i2++) {
                    const _refResult3 = validateVariant(value.variants[i2], options);
                    if (!_refResult3.success) {
                        for (const _issue4 of _refResult3.issues) {
                            issues.push({ ..._issue4, path: [...["variants", i2], ..._issue4.path] });
                        }
                        if (abortEarly)
                            return { success: false, issues };
                    }
                }
            }
        }
        if ("shippingMethod" in value) {
            let _matchCount5 = 0;
            if ((() => {
                const _tempIssues: ValidationIssue[] = [];
                if (!(typeof value.shippingMethod === "object" && value.shippingMethod !== null && !Array.isArray(value.shippingMethod))) {
                    _invalidType(_tempIssues, ["shippingMethod"], "object", value.shippingMethod);
                    if (abortEarly)
                        return { success: false, _tempIssues };
                }
                else {
                    if (!("type" in value.shippingMethod)) {
                        _missingKey(_tempIssues, ["shippingMethod"], "type");
                        if (abortEarly)
                            return { success: false, _tempIssues };
                    }
                    if (!("estimatedDays" in value.shippingMethod)) {
                        _missingKey(_tempIssues, ["shippingMethod"], "estimatedDays");
                        if (abortEarly)
                            return { success: false, _tempIssues };
                    }
                    if ("type" in value.shippingMethod) {
                        if (value.shippingMethod.type !== "standard") {
                            _invalidValue(_tempIssues, ["shippingMethod", "type"], "\\"standard\\"", JSON.stringify(value.shippingMethod.type));
                            if (abortEarly)
                                return { success: false, _tempIssues };
                        }
                    }
                    if ("estimatedDays" in value.shippingMethod) {
                        if (!(typeof value.shippingMethod.estimatedDays === "number")) {
                            _invalidType(_tempIssues, ["shippingMethod", "estimatedDays"], "integer", value.shippingMethod.estimatedDays);
                            if (abortEarly)
                                return { success: false, _tempIssues };
                        }
                        else {
                            if (!Number.isInteger(value.shippingMethod.estimatedDays)) {
                                _notInteger(_tempIssues, ["shippingMethod", "estimatedDays"], value.shippingMethod.estimatedDays);
                                if (abortEarly)
                                    return { success: false, _tempIssues };
                            }
                            if (value.shippingMethod.estimatedDays < 3) {
                                _tooSmall(_tempIssues, ["shippingMethod", "estimatedDays"], "number >= 3", String(value.shippingMethod.estimatedDays));
                                if (abortEarly)
                                    return { success: false, _tempIssues };
                            }
                            if (value.shippingMethod.estimatedDays > 7) {
                                _tooBig(_tempIssues, ["shippingMethod", "estimatedDays"], "number <= 7", String(value.shippingMethod.estimatedDays));
                                if (abortEarly)
                                    return { success: false, _tempIssues };
                            }
                        }
                    }
                }
                return _tempIssues.length === 0;
            })()) {
                _matchCount5++;
            }
            if ((() => {
                const _tempIssues: ValidationIssue[] = [];
                if (!(typeof value.shippingMethod === "object" && value.shippingMethod !== null && !Array.isArray(value.shippingMethod))) {
                    _invalidType(_tempIssues, ["shippingMethod"], "object", value.shippingMethod);
                    if (abortEarly)
                        return { success: false, _tempIssues };
                }
                else {
                    if (!("type" in value.shippingMethod)) {
                        _missingKey(_tempIssues, ["shippingMethod"], "type");
                        if (abortEarly)
                            return { success: false, _tempIssues };
                    }
                    if (!("guaranteedDate" in value.shippingMethod)) {
                        _missingKey(_tempIssues, ["shippingMethod"], "guaranteedDate");
                        if (abortEarly)
                            return { success: false, _tempIssues };
                    }
                    if ("type" in value.shippingMethod) {
                        if (value.shippingMethod.type !== "express") {
                            _invalidValue(_tempIssues, ["shippingMethod", "type"], "\\"express\\"", JSON.stringify(value.shippingMethod.type));
                            if (abortEarly)
                                return { success: false, _tempIssues };
                        }
                    }
                    if ("guaranteedDate" in value.shippingMethod) {
                        if (!(typeof value.shippingMethod.guaranteedDate === "string")) {
                            _invalidType(_tempIssues, ["shippingMethod", "guaranteedDate"], "string", value.shippingMethod.guaranteedDate);
                            if (abortEarly)
                                return { success: false, _tempIssues };
                        }
                        else {
                            if (!/^\\d{4}-\\d{2}-\\d{2}$/.test(value.shippingMethod.guaranteedDate)) {
                                _invalidString(_tempIssues, ["shippingMethod", "guaranteedDate"], "string matching pattern /^\\\\d{4}-\\\\d{2}-\\\\d{2}$/", value.shippingMethod.guaranteedDate);
                                if (abortEarly)
                                    return { success: false, _tempIssues };
                            }
                        }
                    }
                }
                return _tempIssues.length === 0;
            })()) {
                _matchCount5++;
            }
            if (_matchCount5 !== 1) {
                issues.push({ code: "invalid_type", path: ["shippingMethod"], message: \`Expected \${"value matching exactly one schema"}, received \${\`value matching \${_matchCount5} schemas\`}\`, expected: "value matching exactly one schema", received: \`value matching \${_matchCount5} schemas\` });
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("paymentOptions" in value) {
            let _anyOfMatched8 = false;
            if (!_anyOfMatched8 && (() => {
                const _tempIssues: ValidationIssue[] = [];
                if (!(typeof value.paymentOptions === "object" && value.paymentOptions !== null && !Array.isArray(value.paymentOptions))) {
                    _invalidType(_tempIssues, ["paymentOptions"], "object", value.paymentOptions);
                    if (abortEarly)
                        return { success: false, _tempIssues };
                }
                else {
                    if (!("creditCard" in value.paymentOptions)) {
                        _missingKey(_tempIssues, ["paymentOptions"], "creditCard");
                        if (abortEarly)
                            return { success: false, _tempIssues };
                    }
                    if ("creditCard" in value.paymentOptions) {
                        if (!(typeof value.paymentOptions.creditCard === "object" && value.paymentOptions.creditCard !== null && !Array.isArray(value.paymentOptions.creditCard))) {
                            _invalidType(_tempIssues, ["paymentOptions", "creditCard"], "object", value.paymentOptions.creditCard);
                            if (abortEarly)
                                return { success: false, _tempIssues };
                        }
                        else {
                            if (!("lastFourDigits" in value.paymentOptions.creditCard)) {
                                _missingKey(_tempIssues, ["paymentOptions", "creditCard"], "lastFourDigits");
                                if (abortEarly)
                                    return { success: false, _tempIssues };
                            }
                            if (!("brand" in value.paymentOptions.creditCard)) {
                                _missingKey(_tempIssues, ["paymentOptions", "creditCard"], "brand");
                                if (abortEarly)
                                    return { success: false, _tempIssues };
                            }
                            if ("lastFourDigits" in value.paymentOptions.creditCard) {
                                if (!(typeof value.paymentOptions.creditCard.lastFourDigits === "string")) {
                                    _invalidType(_tempIssues, ["paymentOptions", "creditCard", "lastFourDigits"], "string", value.paymentOptions.creditCard.lastFourDigits);
                                    if (abortEarly)
                                        return { success: false, _tempIssues };
                                }
                                else {
                                    if (!/^\\d{4}$/.test(value.paymentOptions.creditCard.lastFourDigits)) {
                                        _invalidString(_tempIssues, ["paymentOptions", "creditCard", "lastFourDigits"], "string matching pattern /^\\\\d{4}$/", value.paymentOptions.creditCard.lastFourDigits);
                                        if (abortEarly)
                                            return { success: false, _tempIssues };
                                    }
                                }
                            }
                            if ("brand" in value.paymentOptions.creditCard) {
                                if (!(["visa", "mastercard", "amex"] as unknown[]).includes(value.paymentOptions.creditCard.brand)) {
                                    _invalidValue(_tempIssues, ["paymentOptions", "creditCard", "brand"], "\\"visa\\" | \\"mastercard\\" | \\"amex\\"", JSON.stringify(value.paymentOptions.creditCard.brand));
                                    if (abortEarly)
                                        return { success: false, _tempIssues };
                                }
                            }
                        }
                    }
                }
                return _tempIssues.length === 0;
            })()) {
                _anyOfMatched8 = true;
            }
            if (!_anyOfMatched8 && (() => {
                const _tempIssues: ValidationIssue[] = [];
                if (!(typeof value.paymentOptions === "object" && value.paymentOptions !== null && !Array.isArray(value.paymentOptions))) {
                    _invalidType(_tempIssues, ["paymentOptions"], "object", value.paymentOptions);
                    if (abortEarly)
                        return { success: false, _tempIssues };
                }
                else {
                    if (!("paypal" in value.paymentOptions)) {
                        _missingKey(_tempIssues, ["paymentOptions"], "paypal");
                        if (abortEarly)
                            return { success: false, _tempIssues };
                    }
                    if ("paypal" in value.paymentOptions) {
                        if (!(typeof value.paymentOptions.paypal === "object" && value.paymentOptions.paypal !== null && !Array.isArray(value.paymentOptions.paypal))) {
                            _invalidType(_tempIssues, ["paymentOptions", "paypal"], "object", value.paymentOptions.paypal);
                            if (abortEarly)
                                return { success: false, _tempIssues };
                        }
                        else {
                            if (!("email" in value.paymentOptions.paypal)) {
                                _missingKey(_tempIssues, ["paymentOptions", "paypal"], "email");
                                if (abortEarly)
                                    return { success: false, _tempIssues };
                            }
                            if ("email" in value.paymentOptions.paypal) {
                                if (!(typeof value.paymentOptions.paypal.email === "string")) {
                                    _invalidType(_tempIssues, ["paymentOptions", "paypal", "email"], "string", value.paymentOptions.paypal.email);
                                    if (abortEarly)
                                        return { success: false, _tempIssues };
                                }
                            }
                        }
                    }
                }
                return _tempIssues.length === 0;
            })()) {
                _anyOfMatched8 = true;
            }
            if (!_anyOfMatched8 && (() => {
                const _tempIssues: ValidationIssue[] = [];
                if (!(typeof value.paymentOptions === "object" && value.paymentOptions !== null && !Array.isArray(value.paymentOptions))) {
                    _invalidType(_tempIssues, ["paymentOptions"], "object", value.paymentOptions);
                    if (abortEarly)
                        return { success: false, _tempIssues };
                }
                else {
                    if (!("bankTransfer" in value.paymentOptions)) {
                        _missingKey(_tempIssues, ["paymentOptions"], "bankTransfer");
                        if (abortEarly)
                            return { success: false, _tempIssues };
                    }
                    if ("bankTransfer" in value.paymentOptions) {
                        if (!(typeof value.paymentOptions.bankTransfer === "object" && value.paymentOptions.bankTransfer !== null && !Array.isArray(value.paymentOptions.bankTransfer))) {
                            _invalidType(_tempIssues, ["paymentOptions", "bankTransfer"], "object", value.paymentOptions.bankTransfer);
                            if (abortEarly)
                                return { success: false, _tempIssues };
                        }
                        else {
                            if (!("accountNumber" in value.paymentOptions.bankTransfer)) {
                                _missingKey(_tempIssues, ["paymentOptions", "bankTransfer"], "accountNumber");
                                if (abortEarly)
                                    return { success: false, _tempIssues };
                            }
                            if ("accountNumber" in value.paymentOptions.bankTransfer) {
                                if (!(typeof value.paymentOptions.bankTransfer.accountNumber === "string")) {
                                    _invalidType(_tempIssues, ["paymentOptions", "bankTransfer", "accountNumber"], "string", value.paymentOptions.bankTransfer.accountNumber);
                                    if (abortEarly)
                                        return { success: false, _tempIssues };
                                }
                                else {
                                    if (value.paymentOptions.bankTransfer.accountNumber.length < 10) {
                                        _tooSmall(_tempIssues, ["paymentOptions", "bankTransfer", "accountNumber"], "string with length >= 10", \`string with length \${value.paymentOptions.bankTransfer.accountNumber.length}\`);
                                        if (abortEarly)
                                            return { success: false, _tempIssues };
                                    }
                                }
                            }
                        }
                    }
                }
                return _tempIssues.length === 0;
            })()) {
                _anyOfMatched8 = true;
            }
            if (!_anyOfMatched8) {
                issues.push({ code: "invalid_type", path: ["paymentOptions"], message: \`Expected \${"value matching at least one schema"}, received \${"value matching no schemas"}\`, expected: "value matching at least one schema", received: "value matching no schemas" });
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("features" in value) {
            if (!Array.isArray(value.features)) {
                _invalidType(issues, ["features"], "array", value.features);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                for (let i9 = 0; i9 < value.features.length; i9++) {
                    if (!(typeof value.features[i9] === "object" && value.features[i9] !== null && !Array.isArray(value.features[i9]))) {
                        _invalidType(issues, ["features", i9], "object", value.features[i9]);
                        if (abortEarly)
                            return { success: false, issues };
                    }
                    else {
                        if (!("name" in value.features[i9])) {
                            _missingKey(issues, ["features", i9], "name");
                            if (abortEarly)
                                return { success: false, issues };
                        }
                        if (!("values" in value.features[i9])) {
                            _missingKey(issues, ["features", i9], "values");
                            if (abortEarly)
                                return { success: false, issues };
                        }
                        if ("name" in value.features[i9]) {
                            if (!(typeof value.features[i9].name === "string")) {
                                _invalidType(issues, ["features", i9, "name"], "string", value.features[i9].name);
                                if (abortEarly)
                                    return { success: false, issues };
                            }
                        }
                        if ("values" in value.features[i9]) {
                            let _anyOfMatched10 = false;
                            if (!_anyOfMatched10 && (() => {
                                const _tempIssues: ValidationIssue[] = [];
                                if (!(typeof value.features[i9].values === "string")) {
                                    _invalidType(_tempIssues, ["features", i9, "values"], "string", value.features[i9].values);
                                    if (abortEarly)
                                        return { success: false, _tempIssues };
                                }
                                return _tempIssues.length === 0;
                            })()) {
                                _anyOfMatched10 = true;
                            }
                            if (!_anyOfMatched10 && (() => {
                                const _tempIssues: ValidationIssue[] = [];
                                if (!Array.isArray(value.features[i9].values)) {
                                    _invalidType(_tempIssues, ["features", i9, "values"], "array", value.features[i9].values);
                                    if (abortEarly)
                                        return { success: false, _tempIssues };
                                }
                                else {
                                    for (let i11 = 0; i11 < value.features[i9].values.length; i11++) {
                                        if (!(typeof value.features[i9].values[i11] === "string")) {
                                            _invalidType(_tempIssues, ["features", i9, "values", i11], "string", value.features[i9].values[i11]);
                                            if (abortEarly)
                                                return { success: false, _tempIssues };
                                        }
                                    }
                                }
                                return _tempIssues.length === 0;
                            })()) {
                                _anyOfMatched10 = true;
                            }
                            if (!_anyOfMatched10 && (() => {
                                const _tempIssues: ValidationIssue[] = [];
                                if (!Array.isArray(value.features[i9].values)) {
                                    _invalidType(_tempIssues, ["features", i9, "values"], "array", value.features[i9].values);
                                    if (abortEarly)
                                        return { success: false, _tempIssues };
                                }
                                else {
                                    for (let i12 = 0; i12 < value.features[i9].values.length; i12++) {
                                        let _anyOfMatched13 = false;
                                        if (!_anyOfMatched13 && (() => {
                                            const _tempIssues: ValidationIssue[] = [];
                                            if (!(typeof value.features[i9].values[i12] === "string")) {
                                                _invalidType(_tempIssues, ["features", i9, "values", i12], "string", value.features[i9].values[i12]);
                                                if (abortEarly)
                                                    return { success: false, _tempIssues };
                                            }
                                            return _tempIssues.length === 0;
                                        })()) {
                                            _anyOfMatched13 = true;
                                        }
                                        if (!_anyOfMatched13 && (() => {
                                            const _tempIssues: ValidationIssue[] = [];
                                            if (!(typeof value.features[i9].values[i12] === "number")) {
                                                _invalidType(_tempIssues, ["features", i9, "values", i12], "number", value.features[i9].values[i12]);
                                                if (abortEarly)
                                                    return { success: false, _tempIssues };
                                            }
                                            return _tempIssues.length === 0;
                                        })()) {
                                            _anyOfMatched13 = true;
                                        }
                                        if (!_anyOfMatched13) {
                                            _tempIssues.push({ code: "invalid_type", path: ["features", i9, "values", i12], message: \`Expected \${"value matching at least one schema"}, received \${"value matching no schemas"}\`, expected: "value matching at least one schema", received: "value matching no schemas" });
                                            if (abortEarly)
                                                return { success: false, _tempIssues };
                                        }
                                    }
                                }
                                return _tempIssues.length === 0;
                            })()) {
                                _anyOfMatched10 = true;
                            }
                            if (!_anyOfMatched10) {
                                issues.push({ code: "invalid_type", path: ["features", i9, "values"], message: \`Expected \${"value matching at least one schema"}, received \${"value matching no schemas"}\`, expected: "value matching at least one schema", received: "value matching no schemas" });
                                if (abortEarly)
                                    return { success: false, issues };
                            }
                        }
                    }
                }
            }
        }
        for (const key14 in value) {
            if (!["id", "name", "price", "discount", "tags", "metadata", "status", "variants", "shippingMethod", "paymentOptions", "features"].includes(key14)) {
                _unrecognizedKey(issues, [key14], \`one of known properties (\${["id", "name", "price", "discount", "tags", "metadata", "status", "variants", "shippingMethod", "paymentOptions", "features"].join(", ")})\`, key14);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
    }
    if (issues.length > 0) {
        return { success: false, issues };
    }
    return { success: true, data: value as Complex };
}
export function unsafeValidateComplex(value: unknown): Complex {
    const result = validateComplex(value, { abortEarly: true });
    if (!result.success) {
        throw new Error("Validation failed: value is not Complex");
    }
    return result.data;
}


function validateVariant(value: unknown, options?: ValidationOptions): ValidationResult<Variant> {
    const issues: ValidationIssue[] = [];
    const abortEarly = options?.abortEarly ?? false;
    if (!(typeof value === "object" && value !== null && !Array.isArray(value))) {
        _invalidType(issues, [], "object", value);
        if (abortEarly)
            return { success: false, issues };
    }
    else {
        if (!("sku" in value)) {
            _missingKey(issues, [], "sku");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("attributes" in value)) {
            _missingKey(issues, [], "attributes");
            if (abortEarly)
                return { success: false, issues };
        }
        if ("sku" in value) {
            if (!(typeof value.sku === "string")) {
                _invalidType(issues, ["sku"], "string", value.sku);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (!/^[A-Z0-9]{6,}$/.test(value.sku)) {
                    _invalidString(issues, ["sku"], "string matching pattern /^[A-Z0-9]{6,}$/", value.sku);
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        if ("attributes" in value) {
            if (!(typeof value.attributes === "object" && value.attributes !== null && !Array.isArray(value.attributes))) {
                _invalidType(issues, ["attributes"], "object", value.attributes);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
    }
    if (issues.length > 0) {
        return { success: false, issues };
    }
    return { success: true, data: value as Variant };
}
"
`;

exports[`Generated code snapshots ref-validator.ts snapshot 1`] = `
"// Generated by @speria-jp/json-schema-validator-gen
// https://github.com/speria-jp/json-schema-validator-gen
// Do not edit manually
// ============================================================================
// Validation Types (auto-generated)
// ============================================================================

type ValidationResult<T> =
  | { success: true; data: T }
  | { success: false; issues: ValidationIssue[] };

interface ValidationIssue {
  code: ValidationIssueCode;
  path: (string | number)[];
  message: string;
  expected: string;
  received: string;
}

type ValidationIssueCode =
  | "invalid_type"
  | "invalid_value"
  | "too_small"
  | "too_big"
  | "invalid_string"
  | "not_integer"
  | "not_unique"
  | "unrecognized_key"
  | "missing_key";

interface ValidationOptions {
  abortEarly?: boolean;
}

// ============================================================================
// Validation Helpers (auto-generated)
// ============================================================================

function _getType(value: unknown): string {
  if (value === null) return "null";
  if (Array.isArray(value)) return "array";
  return typeof value;
}

function _invalidType(issues: ValidationIssue[], path: (string | number)[], expected: string, value: unknown): void {
  const received = _getType(value);
  issues.push({ code: "invalid_type", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _missingKey(issues: ValidationIssue[], path: (string | number)[], key: string): void {
  const expected = \`object with required property "\${key}"\`;
  const received = \`object without property "\${key}"\`;
  issues.push({ code: "missing_key", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _tooSmall(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "too_small", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _tooBig(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "too_big", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _invalidString(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "invalid_string", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _invalidValue(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "invalid_value", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _notInteger(issues: ValidationIssue[], path: (string | number)[], value: number): void {
  issues.push({ code: "not_integer", path, message: \`Expected integer, received \${value}\`, expected: "integer", received: String(value) });
}

function _notUnique(issues: ValidationIssue[], path: (string | number)[]): void {
  issues.push({ code: "not_unique", path, message: "Expected array with unique items, received array with duplicate items", expected: "array with unique items", received: "array with duplicate items" });
}

function _unrecognizedKey(issues: ValidationIssue[], path: (string | number)[], expected: string, key: string): void {
  issues.push({ code: "unrecognized_key", path, message: \`Expected \${expected}, received \${key}\`, expected, received: key });
}


export type Ref = {
    id: number;
    name: string;
    address: Address;
    workAddress?: Address;
};


type Address = {
    street: string;
    city: string;
    zipCode?: string;
};


export function validateRef(value: unknown, options?: ValidationOptions): ValidationResult<Ref> {
    const issues: ValidationIssue[] = [];
    const abortEarly = options?.abortEarly ?? false;
    if (!(typeof value === "object" && value !== null && !Array.isArray(value))) {
        _invalidType(issues, [], "object", value);
        if (abortEarly)
            return { success: false, issues };
    }
    else {
        if (!("id" in value)) {
            _missingKey(issues, [], "id");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("name" in value)) {
            _missingKey(issues, [], "name");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("address" in value)) {
            _missingKey(issues, [], "address");
            if (abortEarly)
                return { success: false, issues };
        }
        if ("id" in value) {
            if (!(typeof value.id === "number")) {
                _invalidType(issues, ["id"], "integer", value.id);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (!Number.isInteger(value.id)) {
                    _notInteger(issues, ["id"], value.id);
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        if ("name" in value) {
            if (!(typeof value.name === "string")) {
                _invalidType(issues, ["name"], "string", value.name);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("address" in value) {
            const _refResult1 = validateAddress(value.address, options);
            if (!_refResult1.success) {
                for (const _issue2 of _refResult1.issues) {
                    issues.push({ ..._issue2, path: [...["address"], ..._issue2.path] });
                }
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("workAddress" in value) {
            const _refResult3 = validateAddress(value.workAddress, options);
            if (!_refResult3.success) {
                for (const _issue4 of _refResult3.issues) {
                    issues.push({ ..._issue4, path: [...["workAddress"], ..._issue4.path] });
                }
                if (abortEarly)
                    return { success: false, issues };
            }
        }
    }
    if (issues.length > 0) {
        return { success: false, issues };
    }
    return { success: true, data: value as Ref };
}
export function unsafeValidateRef(value: unknown): Ref {
    const result = validateRef(value, { abortEarly: true });
    if (!result.success) {
        throw new Error("Validation failed: value is not Ref");
    }
    return result.data;
}


function validateAddress(value: unknown, options?: ValidationOptions): ValidationResult<Address> {
    const issues: ValidationIssue[] = [];
    const abortEarly = options?.abortEarly ?? false;
    if (!(typeof value === "object" && value !== null && !Array.isArray(value))) {
        _invalidType(issues, [], "object", value);
        if (abortEarly)
            return { success: false, issues };
    }
    else {
        if (!("street" in value)) {
            _missingKey(issues, [], "street");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("city" in value)) {
            _missingKey(issues, [], "city");
            if (abortEarly)
                return { success: false, issues };
        }
        if ("street" in value) {
            if (!(typeof value.street === "string")) {
                _invalidType(issues, ["street"], "string", value.street);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("city" in value) {
            if (!(typeof value.city === "string")) {
                _invalidType(issues, ["city"], "string", value.city);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("zipCode" in value) {
            if (!(typeof value.zipCode === "string")) {
                _invalidType(issues, ["zipCode"], "string", value.zipCode);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (!/^\\d{5}$/.test(value.zipCode)) {
                    _invalidString(issues, ["zipCode"], "string matching pattern /^\\\\d{5}$/", value.zipCode);
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
    }
    if (issues.length > 0) {
        return { success: false, issues };
    }
    return { success: true, data: value as Address };
}
"
`;

exports[`Generated code snapshots multi-types.ts snapshot 1`] = `
"// Generated by @speria-jp/json-schema-validator-gen
// https://github.com/speria-jp/json-schema-validator-gen
// Do not edit manually
// ============================================================================
// Validation Types (auto-generated)
// ============================================================================

type ValidationResult<T> =
  | { success: true; data: T }
  | { success: false; issues: ValidationIssue[] };

interface ValidationIssue {
  code: ValidationIssueCode;
  path: (string | number)[];
  message: string;
  expected: string;
  received: string;
}

type ValidationIssueCode =
  | "invalid_type"
  | "invalid_value"
  | "too_small"
  | "too_big"
  | "invalid_string"
  | "not_integer"
  | "not_unique"
  | "unrecognized_key"
  | "missing_key";

interface ValidationOptions {
  abortEarly?: boolean;
}

// ============================================================================
// Validation Helpers (auto-generated)
// ============================================================================

function _getType(value: unknown): string {
  if (value === null) return "null";
  if (Array.isArray(value)) return "array";
  return typeof value;
}

function _invalidType(issues: ValidationIssue[], path: (string | number)[], expected: string, value: unknown): void {
  const received = _getType(value);
  issues.push({ code: "invalid_type", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _missingKey(issues: ValidationIssue[], path: (string | number)[], key: string): void {
  const expected = \`object with required property "\${key}"\`;
  const received = \`object without property "\${key}"\`;
  issues.push({ code: "missing_key", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _tooSmall(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "too_small", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _tooBig(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "too_big", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _invalidString(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "invalid_string", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _invalidValue(issues: ValidationIssue[], path: (string | number)[], expected: string, received: string): void {
  issues.push({ code: "invalid_value", path, message: \`Expected \${expected}, received \${received}\`, expected, received });
}

function _notInteger(issues: ValidationIssue[], path: (string | number)[], value: number): void {
  issues.push({ code: "not_integer", path, message: \`Expected integer, received \${value}\`, expected: "integer", received: String(value) });
}

function _notUnique(issues: ValidationIssue[], path: (string | number)[]): void {
  issues.push({ code: "not_unique", path, message: "Expected array with unique items, received array with duplicate items", expected: "array with unique items", received: "array with duplicate items" });
}

function _unrecognizedKey(issues: ValidationIssue[], path: (string | number)[], expected: string, key: string): void {
  issues.push({ code: "unrecognized_key", path, message: \`Expected \${expected}, received \${key}\`, expected, received: key });
}


export type User = {
    id: string;
    name: string;
    email: string;
};


export type Post = {
    id: string;
    title: string;
    content: string;
    authorId: string;
    tags?: string[];
    published?: boolean;
};


export type Comment = {
    id: string;
    postId: string;
    authorId: string;
    text: string;
    createdAt: string;
};


export function validateUser(value: unknown, options?: ValidationOptions): ValidationResult<User> {
    const issues: ValidationIssue[] = [];
    const abortEarly = options?.abortEarly ?? false;
    if (!(typeof value === "object" && value !== null && !Array.isArray(value))) {
        _invalidType(issues, [], "object", value);
        if (abortEarly)
            return { success: false, issues };
    }
    else {
        if (!("id" in value)) {
            _missingKey(issues, [], "id");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("name" in value)) {
            _missingKey(issues, [], "name");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("email" in value)) {
            _missingKey(issues, [], "email");
            if (abortEarly)
                return { success: false, issues };
        }
        if ("id" in value) {
            if (!(typeof value.id === "string")) {
                _invalidType(issues, ["id"], "string", value.id);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("name" in value) {
            if (!(typeof value.name === "string")) {
                _invalidType(issues, ["name"], "string", value.name);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (value.name.length < 1) {
                    _tooSmall(issues, ["name"], "string with length >= 1", \`string with length \${value.name.length}\`);
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        if ("email" in value) {
            if (!(typeof value.email === "string")) {
                _invalidType(issues, ["email"], "string", value.email);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (!/^[\\w.-]+@[\\w.-]+\\.[a-z]{2,}$/.test(value.email)) {
                    _invalidString(issues, ["email"], "string matching pattern /^[\\\\w.-]+@[\\\\w.-]+\\\\.[a-z]{2,}$/", value.email);
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        for (const key1 in value) {
            if (!["id", "name", "email"].includes(key1)) {
                _unrecognizedKey(issues, [key1], \`one of known properties (\${["id", "name", "email"].join(", ")})\`, key1);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
    }
    if (issues.length > 0) {
        return { success: false, issues };
    }
    return { success: true, data: value as User };
}
export function unsafeValidateUser(value: unknown): User {
    const result = validateUser(value, { abortEarly: true });
    if (!result.success) {
        throw new Error("Validation failed: value is not User");
    }
    return result.data;
}


export function validatePost(value: unknown, options?: ValidationOptions): ValidationResult<Post> {
    const issues: ValidationIssue[] = [];
    const abortEarly = options?.abortEarly ?? false;
    if (!(typeof value === "object" && value !== null && !Array.isArray(value))) {
        _invalidType(issues, [], "object", value);
        if (abortEarly)
            return { success: false, issues };
    }
    else {
        if (!("id" in value)) {
            _missingKey(issues, [], "id");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("title" in value)) {
            _missingKey(issues, [], "title");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("content" in value)) {
            _missingKey(issues, [], "content");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("authorId" in value)) {
            _missingKey(issues, [], "authorId");
            if (abortEarly)
                return { success: false, issues };
        }
        if ("id" in value) {
            if (!(typeof value.id === "string")) {
                _invalidType(issues, ["id"], "string", value.id);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("title" in value) {
            if (!(typeof value.title === "string")) {
                _invalidType(issues, ["title"], "string", value.title);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (value.title.length < 1) {
                    _tooSmall(issues, ["title"], "string with length >= 1", \`string with length \${value.title.length}\`);
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (value.title.length > 200) {
                    _tooBig(issues, ["title"], "string with length <= 200", \`string with length \${value.title.length}\`);
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        if ("content" in value) {
            if (!(typeof value.content === "string")) {
                _invalidType(issues, ["content"], "string", value.content);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("authorId" in value) {
            if (!(typeof value.authorId === "string")) {
                _invalidType(issues, ["authorId"], "string", value.authorId);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("tags" in value) {
            if (!Array.isArray(value.tags)) {
                _invalidType(issues, ["tags"], "array", value.tags);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                for (let i1 = 0; i1 < value.tags.length; i1++) {
                    if (!(typeof value.tags[i1] === "string")) {
                        _invalidType(issues, ["tags", i1], "string", value.tags[i1]);
                        if (abortEarly)
                            return { success: false, issues };
                    }
                }
            }
        }
        if ("published" in value) {
            if (typeof value.published !== "boolean") {
                _invalidType(issues, ["published"], "boolean", value.published);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        for (const key2 in value) {
            if (!["id", "title", "content", "authorId", "tags", "published"].includes(key2)) {
                _unrecognizedKey(issues, [key2], \`one of known properties (\${["id", "title", "content", "authorId", "tags", "published"].join(", ")})\`, key2);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
    }
    if (issues.length > 0) {
        return { success: false, issues };
    }
    return { success: true, data: value as Post };
}
export function unsafeValidatePost(value: unknown): Post {
    const result = validatePost(value, { abortEarly: true });
    if (!result.success) {
        throw new Error("Validation failed: value is not Post");
    }
    return result.data;
}


export function validateComment(value: unknown, options?: ValidationOptions): ValidationResult<Comment> {
    const issues: ValidationIssue[] = [];
    const abortEarly = options?.abortEarly ?? false;
    if (!(typeof value === "object" && value !== null && !Array.isArray(value))) {
        _invalidType(issues, [], "object", value);
        if (abortEarly)
            return { success: false, issues };
    }
    else {
        if (!("id" in value)) {
            _missingKey(issues, [], "id");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("postId" in value)) {
            _missingKey(issues, [], "postId");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("authorId" in value)) {
            _missingKey(issues, [], "authorId");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("text" in value)) {
            _missingKey(issues, [], "text");
            if (abortEarly)
                return { success: false, issues };
        }
        if (!("createdAt" in value)) {
            _missingKey(issues, [], "createdAt");
            if (abortEarly)
                return { success: false, issues };
        }
        if ("id" in value) {
            if (!(typeof value.id === "string")) {
                _invalidType(issues, ["id"], "string", value.id);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("postId" in value) {
            if (!(typeof value.postId === "string")) {
                _invalidType(issues, ["postId"], "string", value.postId);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("authorId" in value) {
            if (!(typeof value.authorId === "string")) {
                _invalidType(issues, ["authorId"], "string", value.authorId);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        if ("text" in value) {
            if (!(typeof value.text === "string")) {
                _invalidType(issues, ["text"], "string", value.text);
                if (abortEarly)
                    return { success: false, issues };
            }
            else {
                if (value.text.length < 1) {
                    _tooSmall(issues, ["text"], "string with length >= 1", \`string with length \${value.text.length}\`);
                    if (abortEarly)
                        return { success: false, issues };
                }
                if (value.text.length > 1000) {
                    _tooBig(issues, ["text"], "string with length <= 1000", \`string with length \${value.text.length}\`);
                    if (abortEarly)
                        return { success: false, issues };
                }
            }
        }
        if ("createdAt" in value) {
            if (!(typeof value.createdAt === "string")) {
                _invalidType(issues, ["createdAt"], "string", value.createdAt);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
        for (const key1 in value) {
            if (!["id", "postId", "authorId", "text", "createdAt"].includes(key1)) {
                _unrecognizedKey(issues, [key1], \`one of known properties (\${["id", "postId", "authorId", "text", "createdAt"].join(", ")})\`, key1);
                if (abortEarly)
                    return { success: false, issues };
            }
        }
    }
    if (issues.length > 0) {
        return { success: false, issues };
    }
    return { success: true, data: value as Comment };
}
export function unsafeValidateComment(value: unknown): Comment {
    const result = validateComment(value, { abortEarly: true });
    if (!result.success) {
        throw new Error("Validation failed: value is not Comment");
    }
    return result.data;
}
"
`;
